update index.html to reflect new button layout

--- a/data/index.html
+++ b/data/index.html
@@ -86,9 +86,18 @@
 
     <div class="grid">
         <button onclick="play_track(1)">✈ Airplane Cabin</button>
-        <button onclick="play_track(2)">🌧 Rain</button>
-        <button onclick="play_track(3)">🌀 Fan</button>
-        <!-- More buttons for more tracks on the SD card -->
+        <button onclick="play_track(2)">🌌 Celestial</button>
+        <button onclick="play_track(3)">⛈ Thunderstorm</button>
+        <button onclick="play_track(4)">🌧 Rain</button>
+        <button onclick="play_track(5)">🌿 Rainforest</button>
+        <button onclick="play_track(6)">🏞 Waterfall</button>
+        <button onclick="play_track(7)">⛲ Water Fountain</button>
+        <button onclick="play_track(8)">🌊 Ocean Waves</button>
+        <button onclick="play_track(9)">🌀 Fan</button>
+        <button onclick="play_track(10)">🔥 Campfire</button>
+        <button onclick="play_track(11)">🚿 Shower</button>
+        <button onclick="play_track(12)">💨 Hairdryer</button>
+        <button onclick="play_track(13)">🧹 Vacuum Cleaner</button>
     </div>
 
     <div class="status" id="status"></div>
